SLI-2533 Fix duplicate configuration scope registration in tests (#1663)